--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@r2wc/react-to-web-component": "^2.0.3",
     "r2wc": "^0.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
